--- a/MerlionPortal/MerlionPortal-war/web/viewallrequest.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/viewallrequest.xhtml
@@ -17,7 +17,7 @@
                 <p:menuitem value="PRODUCTS" url="displayAllProduct.xhtml" />
                 <p:submenu label="QUOTATION" >
                     <p:menuitem value="View All Request" url="viewallrequest.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayAllProducts.xhtml" />
+                    <p:menuitem value="View Quotation" url="displayallquotation.xhtml" />
                     <p:menuitem value="Quotation Status" url="displayAllProducts.xhtml" />
                 </p:submenu>
                 <p:submenu label="ORDERS" >
