update change password code

--- a/MerlionPortal/MerlionPortal-war/web/changepassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/changepassword.xhtml
@@ -7,31 +7,34 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
-    
+
 
     <ui:composition template="templates/template.xhtml">
-        <ui:param name="pageName" value="Index" />
+        <ui:param name="pageName" value="Change Password" />
 
         <!-- Override Content -->
         <ui:define name="content">
             <h:form>
+                <script type="text/javascript">
+                    function fail(){
+                        $.notify("Password mismatch. Please try again.","error");
+                    }
+                </script>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
                             <h2>Change Password</h2>
                             <div class="input-group form-control-spacing">
                                 <div class="input-group-addon input-addon-fixedwidth">New Password</div>
-                                <h:inputText id="passwordInput" value="#{resetPasswordBean.setPassword}" styleClass="form-control" pt:placeholder="Enter your password" />
+                                <h:inputSecret value="#{changePasswordBean.password}" styleClass="form-control" pt:placeholder="Enter your password" />
                             </div>
 
                             <div class="input-group form-control-spacing">
                                 <div class="input-group-addon input-addon-fixedwidth">Confirm Password</div>
-                                <c:if test="#{confirmedpassword == firstone}">action="#dashboard}"
-                  
-                                <h:inputSecret id="passwordInput" value="#{resetPasswordBean.setPassword}" styleClass="form-control" pt:placeholder="Confirm your password" />
+                                <h:inputSecret value="#{changePasswordBean.confirmPassword}" styleClass="form-control" pt:placeholder="Confirm your password" />
                             </div>
                             <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
-                            <p:commandButton value="Submit" id="ajax" actionListener="#{loginBean.login}" styleClass="btn btn-success" ></p:commandButton>
+                            <p:commandButton value="Submit" id="ajax" actionListener="#{changePasswordBean.changePassword}" styleClass="btn btn-success" ></p:commandButton>
                         </div>
                     </div>
                 </div>
@@ -39,5 +42,4 @@
         </ui:define>
 
     </ui:composition>
-
 </html>
