--- a/MerlionPortal/MerlionPortal-war/web/changepassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/changepassword.xhtml
@@ -5,8 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 
     <ui:composition template="templates/template.xhtml">
@@ -16,25 +15,33 @@
         <ui:define name="content">
             <h:form>
                 <script type="text/javascript">
-                    function fail(){
-                        $.notify("Password mismatch. Please try again.","error");
+                    function fail(str) {
+                        $.notify(str, "error");
                     }
                 </script>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4">
                             <h2>Change Password</h2>
+
+                            <div class="input-group form-control-spacing">
+                                <div class="input-group-addon input-addon-fixedwidth">Existing Password</div>
+                                <h:inputSecret value="#{changePasswordBean.existingPassword}" styleClass="form-control" />
+                            </div>
+
                             <div class="input-group form-control-spacing">
                                 <div class="input-group-addon input-addon-fixedwidth">New Password</div>
-                                <h:inputSecret value="#{changePasswordBean.password}" styleClass="form-control" pt:placeholder="Enter your password" />
+                                <h:inputSecret value="#{changePasswordBean.password}" styleClass="form-control" />
                             </div>
 
                             <div class="input-group form-control-spacing">
                                 <div class="input-group-addon input-addon-fixedwidth">Confirm Password</div>
-                                <h:inputSecret value="#{changePasswordBean.confirmPassword}" styleClass="form-control" pt:placeholder="Confirm your password" />
+                                <h:inputSecret value="#{changePasswordBean.confirmPassword}" styleClass="form-control" />
                             </div>
                             <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true"/>
-                            <p:commandButton value="Submit" id="ajax" actionListener="#{changePasswordBean.changePassword}" styleClass="btn btn-success" ></p:commandButton>
+                            <h:commandButton value="Change Password" id="ajax" actionListener="#{changePasswordBean.changePassword}" styleClass="btn btn-success" >
+                                <f:ajax execute="@form" />
+                            </h:commandButton>
                         </div>
                     </div>
                 </div>
