--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -21,6 +21,9 @@
                                 <li class="list-group-item"><a href="${root}/administration.xhtml">View Subscribers</a></li>
                                 <li class="list-group-item"><a href="#">MRP II</a></li>
                                 <li class="list-group-item"><a href="#">TMS</a></li>
+                                <li class="list-group-item"><a href="#">CRMS</a></li>
+                                <li class="list-group-item"><a href="#">WMS</a></li>
+                                <li class="list-group-item"><a href="#">OES</a></li>
                                 <li class="list-group-item"><a href="#">GRNS</a></li>
                             </ul>
                         </div>
