--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -11,7 +11,8 @@
     </h:head>
     <h:body>
         <ul class="">
-            <li><a href="${root}/viewallproducts.xhtml">View Products</a></li>
+            <li><a href="${root}/viewallproducts.xhtml">View Services</a></li>
+            <li><a href="${root}/viewallproducts.xhtml">View Profile</a></li>
         </ul>
 
     </h:body>
