--- a/MerlionPortal/MerlionPortal-war/web/index.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/index.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:composition template="templates/template.xhtml">
         <ui:param name="pageName" value="Index" />
@@ -19,7 +20,10 @@
                             <h2>Login</h2>
                             <div class="input-group form-control-spacing">
                                 <div class="input-group-addon input-addon-fixedwidth">Username</div>
-                                <h:inputText id="usernameInput" value="#{loginBean.username}" styleClass="form-control" pt:placeholder="Enter your username" />
+                                <h:inputText id="usernameInput" value="#{loginBean.username}" styleClass="form-control" pt:placeholder="Enter your username">
+                                    <f:validateLength minimum="4" maximum="16" />
+                                </h:inputText>
+                                <h:message styleClass="errorMsg" for="usernameInput" />
                             </div>
 
                             <div class="input-group form-control-spacing">
