editting viewing BOM  -Fuyao

--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -33,6 +33,8 @@
                 <p:menuitem value="Delete Product" url="deleteproduct.xhtml" />
                 <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
                 <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
+                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                 <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
                         </p:submenu>
                     </p:menu>
 
