--- a/MerlionPortal/MerlionPortal-war/web/mrp/editproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/editproduct.xhtml
@@ -23,6 +23,7 @@
                 <p:menuitem value="Delete Product" url="deleteproduct.xhtml" />
                 <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
                 <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
+                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
             </p:menubar>
             <br/>
             <p:panel id="panel" header="Edit a Product">
