--- a/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/viewallproducts.xhtml
@@ -24,6 +24,7 @@
                 <p:menuitem value="Delete Product" url="deleteproduct.xhtml" />
                 <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
                 <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
+              <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
             </p:menubar>
             <br/>
         </h:form>
