--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -68,7 +68,9 @@
                                 <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
                             </p:selectCheckboxMenu>
                         </h:panelGrid>
-
+                        <div class="col-md-2">
+                            <img id="loadingImg" src="img/load.gif" class="loader hide" />
+                        </div>
                         <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                         <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" styleClass="btn btn-success" icon="ui-icon-check"/>
                     </p:panel>
